--- a/.github/workflows/deploy-docs.yaml
+++ b/.github/workflows/deploy-docs.yaml
@@ -52,7 +52,7 @@ jobs:
         uses: Legion2/swagger-ui-action@v1
         with:
           output: swagger-ui
-          spec-file: service/swagger.yaml
+          spec-file: swagger.yaml
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
