--- a/.github/workflows/deploy-docs.yaml
+++ b/.github/workflows/deploy-docs.yaml
@@ -17,12 +17,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-          registry-url: 'https://registry.npmjs.org'
-          cache: 'npm'
-      - run: npm ci --no-scripts
       - uses: actions/upload-artifact@master
         with:
           name: swagger.yaml
@@ -47,15 +41,12 @@ jobs:
     # Specify runner + deployment step
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/deploy-pages@v1
       - name: Generate Swagger UI
         id: deployment
-        uses:
-          actions/checkout@v3
-          Legion2/swagger-ui-action@v1
+        uses: Legion2/swagger-ui-action@v1
         with:
           output: swagger-ui
           spec-file: service/swagger.yaml
       - name: Deploy to GitHub Pages
-      - uses:
-          actions/checkout@v3
-          actions/deploy-pages@v1
+        uses: actions/deploy-pages@v1
