--- a/.github/workflows/deploy-docs.yaml
+++ b/.github/workflows/deploy-docs.yaml
@@ -6,10 +6,7 @@ on:
       - next
     paths:
       - .github/workflows/deploy-docs.yaml
-      - service/swagger.yaml
-
-#env:
-#  GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+      - service/src/swagger.yaml
 
 jobs:
 
@@ -17,6 +14,7 @@ jobs:
     permissions:
       pages: write
       id-token: write
+      contents: read
 
     environment:
       name: github-pages
@@ -25,19 +23,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: mkdir service/swagger-ui
+      - run: mkdir service/src/swagger-ui
       - name: Generate Swagger UI
         id: deployment
         uses: Legion2/swagger-ui-action@v1
         with:
-          output: service/swagger-ui
-          spec-file: service/swagger.yaml
-      - run: ls -a
-      - run: ls -ar service
-      - run: ls -ar service/swagger-ui
+          output: service/src/swagger-ui
+          spec-file: service/src/swagger.yaml
       - name: Upload pages artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: 'service/swagger-ui'
+          path: 'service/src/swagger-ui'
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v1
