--- a/.github/workflows/deploy-docs.yaml
+++ b/.github/workflows/deploy-docs.yaml
@@ -36,3 +36,10 @@ jobs:
           path: 'service/src/swagger-ui'
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v1
+      - name: Verify page
+        run: |
+          if [ "$(curl -ILs https://turiya-modulous.github.io/testing/ | grep "HTTP/2 200")" ] ; then
+              exit 0
+          else
+              echo -e "Failed to get a 200 response from URL" && exit 1;
+          fi
