add configure pages step

--- a/.github/workflows/deploy-docs.yaml
+++ b/.github/workflows/deploy-docs.yaml
@@ -23,6 +23,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Setup Pages
+        uses: actions/configure-pages@v2
       - run: mkdir service/src/swagger-ui
       - name: Generate Swagger UI
         id: deployment
