--- a/.github/workflows/deploy-docs.yaml
+++ b/.github/workflows/deploy-docs.yaml
@@ -8,6 +8,10 @@ on:
       - .github/workflows/deploy-docs.yaml
       - service/src/swagger.yaml
 
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
 jobs:
 
   deploy:
